# RustyVoxelEngine

./: .gitignore  Cargo.toml  README.md
res/: lines.glslf  main.glslf  main.glslv
src/: main.rs  tree.txt
src/files/: mod.rs
src/graphics/: linebatch.rs  mesh.rs  mod.rs  shader.rs  texture.rs  voxel_renderer.rs
src/lighting/: light_solver.rs  lightmap.rs  mod.rs
src/loaders/: mod.rs  png_loading.rs
src/voxels/: chunks.rs  mod.rs
src/window/: camera.rs  events.rs  mod.rs
