[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.55.0"
gl = "*"
image = {version = "*", default-features = false, features = ["png", "rayon"]}
bytemuck = {version = "*", default-features = false}
glam = "*"
noise = "*" 